src/xsb/xsb-prolog.lisp


(fli:define-foreign-function (ptoc-int "ptoc_int" :source)
                             ((arg-1 reg-num))
                             :result-type
                             prolog-int
                             :language
                             :ansi-c)
(fli:define-foreign-function (ptoc-float "ptoc_float" :source)
                             ((arg-1 reg-num))
                             :result-type
                             prolog-float
                             :language
                             :ansi-c)
(fli:define-foreign-function (ptoc-string "ptoc_string" :source)
                             ((arg-1 reg-num))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (ptoc-longstring
                              "ptoc_longstring"
                              :source)
                             ((arg-1 reg-num))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (ptoc-abs "ptoc_abs" :source)
                             ((arg-1 reg-num))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (ctop-int "ctop_int" :source)
                             ((arg-1 reg-num) (arg-2 prolog-int))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (ctop-float "ctop_float" :source)
                             ((arg-1 reg-num) (arg-2 :double))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (ctop-string "ctop_string" :source)
                             ((arg-1 reg-num) (arg-2 (:pointer :char)))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (ctop-abs "ctop_abs" :source)
                             ((arg-1 reg-num) (arg-2 (:pointer :char)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (string-find "string_find" :source)
                             ((arg-1 (:pointer :char)) (arg-2 :int))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (ctop-term "ctop_term" :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 (:pointer :char))
                              (arg-3 reg-num))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (ptoc-term "ptoc_term" :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 (:pointer :char))
                              (arg-3 reg-num))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (reg-term "reg_term" :source)
                             ((arg-1 reg-num))
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-int "c2p_int" :source)
                             ((arg-1 prolog-int) (arg-2 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-float "c2p_float" :source)
                             ((arg-1 :double) (arg-2 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-string "c2p_string" :source)
                             ;((arg-1 (:pointer :char))
                              ((arg-1 (:reference-pass :ef-mb-string))
                              (arg-2 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-list "c2p_list" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-nil "c2p_nil" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-functor "c2p_functor" :source)
                              ;((arg-1 (:pointer :char))
                              ((arg-1 (:reference-pass :ef-mb-string))
                              (arg-2 :int)
                              (arg-3 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-setfree "c2p_setfree" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-chars "c2p_chars" :source)
                             ((str (:pointer :char))
                              (term prolog-term))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-int "p2c_int" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             prolog-int
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-float "p2c_float" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             prolog-float
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-string "p2c_string" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             ; (:pointer :char)
                             (:pointer (:unsigned :char))
                             ; (:reference-pass :ef-mb-string)
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-functor "p2c_functor" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             ; (:pointer :char)
                             (:pointer (:unsigned :char))
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-arity "p2c_arity" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-chars "p2c_chars" :source)
                             ((arg-1 prolog-term)
                              (arg-2 (:pointer :char))
                              (arg-3 :int))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-arg "p2p_arg" :source)
                             ((arg-1 prolog-term) (arg-2 :int))
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-car "p2p_car" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-cdr "p2p_cdr" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-new "p2p_new" :source)
                             nil
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-unify "p2p_unify" :source)
                             ((arg-1 prolog-term) (arg-2 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-call "p2p_call" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-funtrail "p2p_funtrail" :source)
                             nil
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2p-deref "p2p_deref" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             prolog-term
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-var "is_var" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-int "is_int" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-float "is_float" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-string "is_string" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-atom "is_atom" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-list "is_list" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
